--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "rsuite": "^4.1.1"
+    "rsuite": "^4.1.1",
+    "tcpserver": "^2.1.1"
   }
 }
